app/assets/stylesheets/tufts.scss
$tufts_blue: #6699CC;
$text_color: #404040;
$error_color: #d22;
$hint_color: #777;
$tufts_bar: #EEEEEE;

$gradient_top: #f5f5f5;
$gradient_bottom: #EEEEEE;

$main_padding: 20px 20px 20px 40px;


/* ------------------------
 *  HEADER / NAV
 * ------------------------ */


.navbar-fixed-top {
  margin-bottom: 0;
}
div.image-mastehead > .navbar {
    border-bottom:0;
}
nav#masthead.navbar {
  background-color: $tufts_bar;
  background: linear-gradient(0deg,$gradient_bottom,$gradient_top);
  border-top: 1px solid #E5E5E5;
  border-bottom: 1px solid #E5E5E5;
  height: 71px;
}

.image-masthead .navbar {
    background: inherit;
    border-bottom:none;
}
.image-masthead {
    border-bottom:0;
}
#sidebar {
  margin-left: 0;
}

.sidebar .sidebar-toggle {
    background-color: rgba(240, 240, 240, 0);
    color:lavenderblush;
}

.container-fluid {  
   margin-right: 2em;
   margin-left: 2em;
}

div#content-wrapper > div.main-content {
    background-color: inherit;
}

#logo img {
  width: 150px;
  margin-left: -15px;
}

#content-wrapper > h1 {
  color: $tufts_bar;
}

/* ------------------------
 *  BODY / CONTENT
 * ------------------------ */

body {
  background: radial-gradient(ellipse farthest-corner at center center , #CEDCE7 0%, #596A72 100%) repeat scroll 0 0 rgba(0, 0, 0, 0);
  color: $text_color;
}

h1 {
  color: $text_color;
}

h2 {
  color: #DE6020;
}

h3 {
  color: #0755AC;
}

#content-wrapper.container  {
  border-radius: 6px 6px 0 0;
  background-color: #FFFFFF;
  padding: $main_padding;
}

body.dashboard > div#content-wrapper {
  margin-top:1.5em;
}

.box {
  padding: 15px;
  border-color: #ddd;
  border-width: 1px;
  border-radius: 4px;
  border-style: solid;
  box-shadow: none;
  margin-bottom: 45px;
}

.attachments {
  form {
    margin-bottom: 30px;

    .file {
      display: inline-block;
    }
  }
}


/* ------------------------
 *  FORMS
 * ------------------------ */

.dashboard .nav-tabs > li > a  {
    color:currentColor;
}

.select2-container {
    border: 0;
    box-shadow: none;
    width: 100%;
    height: 100%;
    margin: 0;
    padding: 0;
    border-radius: 0;
}

.help-block {
    display:none;
}

/* ------------------------
 *  FOOTER
 * ------------------------ */

.blue-footer {
  background-color: $tufts_blue;
  padding: $main_padding;
  margin-bottom: 20px;
  border-radius: 0 0 6px 6px;
  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
  margin-left: auto;
  margin-right: auto;

  img {
    border: 0;
    margin-left: -2em;
    margin-top: 1em;
  }
}

#copyright {
  color: #ffffff;
  line-height: 150%;
}

